Add recipe list and recipe templates which extend the base template

--- a/recipebook/ledger/templates/recipe_list.html
+++ b/recipebook/ledger/templates/recipe_list.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe List</title>
-</head>
-<body>
-    <h1>Recipe Book</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>Recipe List</h2>
+<ul>
+    {% for recipe in recipes %}
+        <li><a href="{{ recipe.link }}">{{ recipe.name }}</a></li>
+    {% endfor %}
+</ul>
+{% endblock %}
