--- a/recipebook/ledger/templates/base.html
+++ b/recipebook/ledger/templates/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Book</title>
+    <title>{%block title %}{%endblock %}
+    </title>
 </head>
 <body>
     <h1>Recipe Book</h1>
