Fixed Models, Added RecipeIngredient Instances using the admin panel

--- a/recipebook/ledger/templates/recipe.html
+++ b/recipebook/ledger/templates/recipe.html
@@ -4,8 +4,8 @@
 {% block content %}
 <h2>{{ recipe.name }}</h2>
 <ul>
-    {% for ingredient in recipe.ingredients %}
-        <li>{{ ingredient.name }} - {{ ingredient.quantity }}</li>
-    {% endfor %}
+    {% for ingredient in recipe.ingredients.all %}
+    <li>{{ ingredient.ingredient.name }} - {{ ingredient.quantity }}</li>
+{% endfor %}
 </ul>
 {% endblock %}
