Updated Templates and Models

--- a/recipebook/ledger/templates/recipe.html
+++ b/recipebook/ledger/templates/recipe.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-{%block title %}{{ recipe.name }} {%endblock %}
+{% block title %}{{ recipe.name }}{% endblock %}
 
 {% block content %}
 <h2>{{ recipe.name }}</h2>
 <ul>
-    {% for ingredient in recipe.ingredients.all %}
-    <li>{{ ingredient.ingredient.name }} - {{ ingredient.quantity }}</li>
-{% endfor %}
+    {% for recipe_ingredient in recipe.ingredients.all %}
+        <li>{{ recipe_ingredient.Ingredient.name }} - {{ recipe_ingredient.Quantity }}</li>
+    {% endfor %}
 </ul>
 {% endblock %}
