--- a/recipebook/ledger/templates/recipe_list.html
+++ b/recipebook/ledger/templates/recipe_list.html
@@ -5,7 +5,7 @@
 <h2>Recipe List</h2>
 <ul>
     {% for recipe in recipes %}
-        <li><a href="{{ recipe.link }}">{{ recipe.name }}</a></li>
+        <li><a href="{{ recipe.get_absolute_url }}">{{ recipe.name }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
