--- a/recipebook/ledger/templates/registration/login.html
+++ b/recipebook/ledger/templates/registration/login.html
@@ -1,10 +1,10 @@
-<html>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 <h2>Login</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Log In</button>
+    <button type="submit">Log in</button>
 </form>
-</body>
-</html>
+{% endblock %}
