Updated the base template
It has login and logout now

--- a/recipebook/ledger/templates/base.html
+++ b/recipebook/ledger/templates/base.html
@@ -7,7 +7,17 @@
     </title>
 </head>
 <body>
-    <h1>Recipe Book</h1>
+    {% if user.is_authenticated %}
+        <h1>Welcome, {{ user.username }}!</h1>
+
+        <form method="POST" action="{% url 'logout' %}">
+            {% csrf_token %}
+        <button type="submit">Logout</button>
+        </form>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>            
+    {% endif %}
+    <a href="/recipes/list"><h1>Recipe Book</h1></a>
     {% block content %}
     
     {% endblock %}
