--- a/recipebook/ledger/templates/recipe.html
+++ b/recipebook/ledger/templates/recipe.html
@@ -2,10 +2,18 @@
 {% block title %}{{ recipe.name }}{% endblock %}
 
 {% block content %}
-<h2>{{ recipe.name }}</h2>
+
+<h2> {{ recipe }} by {{ recipe.author.name }}
+</h2>
+<h3> Created On: {{recipe.createdOn}} </h3>
+<h3> Updated On: {{recipe.updatedOn}}</h3>
 <ul>
     {% for recipe_ingredient in recipe.ingredients.all %}
-        <li>{{ recipe_ingredient.Ingredient.name }} - {{ recipe_ingredient.Quantity }}</li>
+        <li>{{ recipe_ingredient.ingredient.name }} - {{ recipe_ingredient.quantity }}</li>
     {% endfor %}
 </ul>
+
+<hr>
+<h3> About the Author</h3>
+<p> {{recipe.author.bio}}</p>
 {% endblock %}
