--- a/recipebook/ledger/templates/recipe_list.html
+++ b/recipebook/ledger/templates/recipe_list.html
@@ -8,4 +8,10 @@
         <li><a href="{{ recipe.get_absolute_url }}">{{ recipe.name }}</a></li>
     {% endfor %}
 </ul>
+
+{% if user.is_authenticated %}
+  <a href="{% url 'ledger:add_recipe' %}">Add New Recipe</a>
+{% endif %}
+
 {% endblock %}
+
